# Diplomado

./: Readme.MD  pyproject.toml
Código/: Base_prueba  Ejercicio1_SQL_Escolaridad.ipynb  Ejercicio_SQL_Escolaridad.ipynb  Modelos_Dimensionales - Python.ipynb  Modelos_dimensionales.ipynb  Primer_Cuaderno.ipynb  SQL_Class.ipynb  consultas_simplesSQL.ipynb  dashboard.py
Datos/: empresa.db  empresa.db-journal
